--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -27,10 +27,12 @@
     font-weight: bold;
 }
 
+
 .navlink:hover{
     color: black;
     -webkit-text-stroke-width: .7px;
     -webkit-text-stroke-color: white;
+    text-shadow: 4px 4px white;
 }
 
 .navlink button{
